# Recuperado

./: README.md
Documentos/Documentos/AED/short_array/: main.cpp
Documentos/Documentos/AED/yanlui_alarcon-oad-ucsp-65d39db62579/: Instrucciones.txt  README.md
Documentos/Documentos/AED/yanlui_alarcon-oad-ucsp-65d39db62579/Games/: CMakeLists.txt  main.cpp
Documentos/Documentos/AED/yanlui_alarcon-oad-ucsp-65d39db62579/Games/Reversi/: GameType.cpp  GameType.h  GridGame.cpp  GridGame.h  Reversi.cbp  Reversi.cpp  Reversi.depend  Reversi.h  TicTacToe.cpp  TicTacToe.h  main.cpp
Documentos/Documentos/Algebra/Ecuacion_Diofantica/: a.out  main.cpp
Documentos/Documentos/Algebra/Euclides/: main.cpp
Documentos/Documentos/Algebra/Euclides_Extendido/: .main.cpp.swo  .main.cpp.swp  main.cpp
Documentos/Documentos/Algebra/Investigacion/: Numeros primos  Numeros primos.aux  Numeros primos.toc
Documentos/Documentos/Algebra/Vectores/: a.out  main.cpp
Documentos/Documentos/Algebra/arit_modular/: a.out  main.cpp
Documentos/Documentos/Algebra/cesar/: main.cpp
Documentos/Documentos/Algebra/concurencias/: a.out  main.cpp
Documentos/Documentos/Algebra/elgamal/: elgamal.pro  main.cpp
Documentos/Documentos/Algebra/plubic_key/: a.out  main.cpp
Documentos/Documentos/Algebra/the_deffie_hellman/: main.cpp
Documentos/Documentos/Arqui/MIPS/: INFORME.odt  average.asm  mips1.asm  mips2.asm
Documentos/Documentos/Arqui/binario/: binario.cpp  binario.h  binario.pro  main.cpp
Documentos/Documentos/Arqui/build-binario-Desktop-Debug/: Makefile  binario
(+16 files in other folders)
